@@ -73,7 +73,7 @@ hybridj_alloc (void *vstate, size_t n)
   hybridj_state_t *state = (hybridj_state_t *) vstate;
   gsl_matrix *q, *r;
   gsl_vector *tau, *diag, *qtf, *newton, *gradient, *x_trial, *f_trial,
-   *df, *qtdf, *rdx, *w, *v;
+   *df, *qtdf, *rdx, *w, *v, *work;
 
   q = gsl_matrix_calloc (n, n);
 
@@ -383,7 +383,7 @@ set (void *vstate, gsl_multiroot_function_fdf * fdf, gsl_vector * x, gsl_vector 
   /* Factorize J into QR decomposition */
 
   gsl_linalg_QR_decomp (J, tau, work);
-  gsl_linalg_QR_unpack (J, tau, q, r);
+  gsl_linalg_QR_unpack (J, tau, q, r, work);
 
   return GSL_SUCCESS;
 }
@@ -558,7 +558,7 @@ iterate (void *vstate, gsl_multiroot_function_fdf * fdf, gsl_vector * x, gsl_vec
       /* Factorize J into QR decomposition */
 
       gsl_linalg_QR_decomp (J, tau, work);
-      gsl_linalg_QR_unpack (J, tau, q, r);
+      gsl_linalg_QR_unpack (J, tau, q, r, work);
       return GSL_SUCCESS;
     }
 
@@ -595,6 +595,7 @@ hybridj_free (void *vstate)
 {
   hybridj_state_t *state = (hybridj_state_t *) vstate;
 
+  gsl_vector_free (state->work);
   gsl_vector_free (state->v);
   gsl_vector_free (state->w);
   gsl_vector_free (state->rdx);
